updated usermanagement
