# pkg/api/handler/otp.go
@@ -26,8 +26,8 @@ func NewOtpHandler(useCase services.OtpUseCase) *OtpHandler {
 // @Produce		    json
 // @Param			otp  body  models.OTPData true	"otp-data"
 // @Success		200	{object}	response.Response{}
-// @Failure		500	{object}	response.Response{}
-// @Router			/users/otplogin [post]
+// @Failure		400	{object}	response.Response{}
+// @Router			/users/sendotp [post]
 func (ot *OtpHandler) SendOTP(c *gin.Context) {
 
 	var phone models.OTPData
@@ -76,5 +76,40 @@ func (ot *OtpHandler) VerifyOTP(c *gin.Context) {
 	// c.SetCookie("Authorization", users.AccessToken, 3600, "", "", false, false)
 	c.SetCookie("Authorization", users.AccessToken, 0, "/", "", false, true)
 	c.SetCookie("Refreshtoken", users.RefreshToken, 0, "/", "", false, true)
+	c.JSON(http.StatusOK, successRes)
+}
+
+// @Summary		Forgot Password
+// @Description	Forgot password functionality
+// @Tags			User
+// @Accept		json
+// @Produce		json
+// @Param			forgotPasswordData  body  models.ForgotPasswordData  true  "Forgot password data"
+// @Success		200	{object} response.Response{}
+// @Failure		400	{object} response.Response{}
+// @Router			/users/forgotpassword [post]
+func (ot *OtpHandler) ForgotPassword(c *gin.Context) {
+	// Bind the JSON request body to the ForgotPasswordData model
+	var forgotPasswordData models.ForgotPasswordData
+	if err := c.BindJSON(&forgotPasswordData); err != nil {
+		errorRes := response.ClientResponse(http.StatusBadRequest, "Fields provided are in the wrong format", nil, err.Error())
+		c.JSON(http.StatusBadRequest, errorRes)
+		return
+	}
+
+	// Call the ForgotPassword use case function to handle the forgot password logic
+	tokenUser, err := ot.otpUseCase.ForgotPassword(forgotPasswordData)
+	if err != nil {
+		errorRes := response.ClientResponse(http.StatusBadRequest, "Could not process forgot password request", nil, err.Error())
+		c.JSON(http.StatusBadRequest, errorRes)
+		return
+	}
+
+	// Set cookies for the obtained tokens
+	c.SetCookie("Authorization", tokenUser.AccessToken, 0, "/", "", false, true)
+	c.SetCookie("Refreshtoken", tokenUser.RefreshToken, 0, "/", "", false, true)
+
+	// Return a success response
+	successRes := response.ClientResponse(http.StatusOK, "Forgot password request processed successfully", tokenUser, nil)
 	c.JSON(http.StatusOK, successRes)
 }
